# Vnox-Server

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.voice-node  README.md  docker-compose.yml
.cargo/: config.toml
.github/.github/: repo-metadata.md
.github/.github/ISSUE_TEMPLATE/: bug.md  protocol.md
.github/.github/workflows/: ci.yml
dev/: README.md  config.toml
docs/: 00-overview.md  00-status.md  01-architecture.md  06-roadmap.md  07-community-model.md  08-gateway-events.md  10-database.md  LICENSE.md  README.md  vnox-ui.html
docs/02-protocol/: README.md  identity.md  packets.md  security.md  state-machine.md  voice-pipeline.md
docs/02-protocol/federation/: README.md
docs/03-server/: README.md  configuration.md  deployment.md  operations.md
docs/04-clients/: README.md  design-system.md  desktop.md  mobile.md  overlay.md
docs/05-features/: admin-panel.md  central-hub.md  custom-emoji-stickers.md  direct-messages.md  encryption.md  private-mode.md  slint-migration.md  video-screen-audit.md  video.md
docs/community/: contributing.md  plugins.md
docs/superpowers/specs/: 2026-05-31-slint-migration-design.md
gateway/: Cargo.toml  build.rs
gateway/src/: lib.rs  main.rs
gateway/src/admin/: metrics.rs  mod.rs
gateway/src/bootstrap/: mod.rs  server_identity.rs
gateway/src/domain/: auth.rs  config.rs  mod.rs  permissions.rs  session.rs
gateway/src/domain/channels/: mod.rs  ops.rs
gateway/src/domain/rate_limit/: mod.rs
gateway/src/domain/storage/: dm_unread.rs  dms.rs  e2ee_dms.rs  messages.rs  mod.rs  presence.rs  social.rs
gateway/src/domain/storage/guilds/: audit.rs  mod.rs  roles.rs
gateway/src/handler/: deliver.rs  dispatch.rs  mod.rs  run.rs
gateway/src/handler/channel/: create.rs  edit.rs  join.rs  leave.rs  mod.rs
gateway/src/handler/content/: chat.rs  message_edit.rs  mod.rs  presence.rs  reaction.rs  read_receipt.rs  typing.rs
gateway/src/handler/direct_message/: history.rs  mod.rs  send.rs  start.rs
gateway/src/handler/e2ee/: key_exchange.rs  message.rs  mod.rs
gateway/src/handler/friends/: decline.rs  list.rs  manage.rs  mod.rs  requests.rs
gateway/src/handler/guild/: audit.rs  crud.rs  invites.rs  list.rs  members.rs  members_list.rs  mod.rs  roles.rs
gateway/src/net/: handshake.rs  io.rs  mod.rs  state.rs
gateway/src/proto/: framing.rs  mod.rs
gateway/src/proto/crypto/: cipher.rs  mod.rs
gateway/src/proto/packet/: flags.rs  id.rs  mod.rs
gateway/src/proto/payloads/: channel.rs  guild.rs  mod.rs  social.rs
plugins/examples/modbot/: index.ts  plugin.json
protocol/: lnex.proto  voice.proto
serverd/: Cargo.toml
serverd/src/: main.rs  voice_membership.rs
voice-node/: Cargo.toml
voice-node/src/: lib.rs  main.rs  relay.rs  runner.rs
voice-node/src/jitter/: adaptive.rs  mod.rs  relay.rs  tests.rs
