[workspace]
resolver = "2"
members = [
    "gateway",
    "voice-node",
    "serverd",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "GPL-3.0"
authors      = ["VNOX Contributors"]
repository   = "https://github.com/loki5512344/Vnox"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek    = { version = "2", features = ["rand_core"] }
x25519-dalek     = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
argon2           = "0.5"
rand             = "0.8"
opus = "0.3"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
hkdf = "0.13"
sha2 = "0.11"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow    = "1"
thiserror = "2"
toml = "1.1"
