[package]
name        = "vnox-gateway"
description = "VNOX gateway — auth, channels, sessions, permissions"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
name = "vnox_gateway"
path = "src/lib.rs"

[[bin]]
name = "vnox-gateway"
path = "src/main.rs"

[dependencies]
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
ed25519-dalek.workspace      = true
x25519-dalek.workspace       = true
chacha20poly1305.workspace   = true
hkdf.workspace               = true
sha2.workspace               = true
argon2.workspace             = true
rand.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
thiserror.workspace          = true
toml.workspace               = true
uuid.workspace               = true
hex.workspace                = true

axum  = { version = "0.8", features = ["ws"] }
tower = "0.5"
sqlx     = { version = "0.9", features = ["sqlite", "postgres", "runtime-tokio", "tls-rustls"] }
bitflags = "2"
prost = "0.13"

# TLS 1.3 support
rustls-pki-types = "1"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = "0.13"

[build-dependencies]
prost-build = "0.13"
