[package]
name        = "vnox-serverd"
description = "VNOX unified server — gateway TCP + voice UDP in one binary"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "vnox-serverd"
path = "src/main.rs"

[dependencies]
vnox-gateway    = { path = "../gateway" }
vnox-voice-node = { path = "../voice-node" }

tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
anyhow.workspace             = true
toml.workspace               = true
serde.workspace              = true
